monticore-generator/src/test/resources/cocos/invalid/A4090/A4090e.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090e extends mc.grammars.types.TestLiterals{

  B = (who:Num_Int | who:"Tom")*;

}
